Bug 109347 - Crashreport: link isn't displayed in Linux
Summary: Crashreport: link isn't displayed in Linux
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.4.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:6.0.0 target:5.4.1 target:24.8.0
Keywords:
: 108422 (view as bug list)
Depends on:
Blocks: Crash-Report
  Show dependency treegraph
 
Reported: 2017-07-25 17:46 UTC by Xisco Faulí
Modified: 2024-05-17 11:28 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (20.94 KB, image/png)
2017-07-25 17:46 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-07-25 17:46:01 UTC
Created attachment 134846 [details]
screenshot

Steps to reproduce:
1. Download LibreOffice 5.4.0.3 from https://www.libreoffice.org/download/download/?version=5.4.0
2. Install it
3. Reproduce bug 108887

Observed behaviour: Once LibreOffice crashes, the crashreport dialog doesn't display any link

Reproduced in

Version: 5.4.0.3
Build ID: 92c2794a7c181ba4c1c5053618179937228ed1fb
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Timur 2017-07-27 08:27:41 UTC
I saw it in Bug 108991.
Comment 2 Xisco Faulí 2017-07-31 21:36:03 UTC
Same result with https://bugs.documentfoundation.org/show_bug.cgi?id=109856
Comment 3 Xisco Faulí 2017-08-01 11:24:04 UTC
Using a debug build, I get this error:

Failed to send http request to https://crashreport.libreoffice.org/submit/, error: Peer certificate cannot be authenticated with given CA certificates
Comment 4 Aron Budea 2017-08-01 12:22:54 UTC
*** Bug 108422 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2017-08-01 18:17:19 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ec4229bc49a315f3f17664bb43e61d3b2e13fb87

tdf#109347: don't verify SSL certificate for crashreport upload

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2017-08-02 08:21:33 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7457079b85b05dca2a35dc29e0dac1204e6eda00&h=libreoffice-5-4

tdf#109347: don't verify SSL certificate for crashreport upload

It will be available in 5.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2017-09-01 18:04:11 UTC
Verified in

Version: 5.4.1.2
Build ID: ea7cb86e6eeb2bf3a5af73a8f7777ac570321527
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 8 Commit Notification 2024-05-17 11:28:19 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bdb47881a214b659b6102c78e5e082197ecf15c7

Revert "tdf#109347: don't verify SSL certificate for crashreport upload"

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.