tdf#109347: don't verify SSL certificate for crashreport upload

Seems that on Windows we can not rely on the CA information to include
the necessary info to verify the connection to the server.

Change-Id: Ieed639c438f5a66e538d1126bb1e8ec1ea02b168
Reviewed-on: https://gerrit.libreoffice.org/40642
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>