desktop/source/minidump/minidump.cxx
@@ -108,6 +108,7 @@ bool uploadContent(std::map<std::string, std::string>& parameters, std::string& 
 
     curl_easy_setopt(curl, CURLOPT_URL, url.c_str());
     curl_easy_setopt(curl, CURLOPT_USERAGENT, kUserAgent);
+    curl_easy_setopt(curl, CURLOPT_SSL_VERIFYPEER, false);
     // Set proxy information if necessary.
     if (!proxy.empty())
         curl_easy_setopt(curl, CURLOPT_PROXY, proxy.c_str());
